--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -32,6 +32,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Inter', sans-serif;
 }
 
+a {
+  text-underline-offset: 6px;
+}
+
 .btn {
   text-transform: uppercase;
   font-weight: 600;
@@ -82,7 +86,6 @@ header {
     padding-bottom: 2px;
     border-bottom: 1px solid #EEEEEE;
     &:hover {
-      color: #EEEEEE;
       border-bottom: 2px solid;
       border-bottom-color: #5F368A;
     }
