--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -465,18 +465,18 @@ code {
     position: absolute;
     top: -12px;
     right: -12px;
-    font-size: 16px;
-    width: 24px;
-    height: 24px;
+    font-size: 22px;
+    width: 32px;
+    height: 32px;
     text-align: center;
     vertical-align: middle;
-    line-height: 24px;
-    color: #fff;
-    background: $success;
-    border-radius: 12px;
+    line-height: 32px;
+    border-radius: 50%;
     &:after {
-      font-family: 'Font Awesome 5 Free';
-      content: "\f00c";
+      font-family: 'Font Awesome 6 Free';
+      content: "\f058";
+      font-weight: 900;
+      color: $success;
     }
   }
 }
